--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
   "name": "invasion",
-  "version": "1.0.0",
-  "description": "",
-  "main": "engine.js",
+  "author": "pete",
+  "version": "0.0.1",
+  "description": "some stupid thing",
+  "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
-    "compile": "webpack --config webpack.config.js"
+    "start": "parcel index.html",
+    "watch": "parcel watch index.html"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.10.0"
+    "parcel-bundler": "^1.4.1"
   }
 }
