--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel index.html",
-    "watch": "parcel watch index.html"
+    "watch": "parcel watch index.html",
+    "build": "parcel build index.html"
   },
   "dependencies": {
     "babel-preset-env": "^1.6.1",
