--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "parcel-bundler": "^1.4.1"
   },
   "babel": {
-    "presets": ["env"]
+    "presets": [
+      "env"
+    ]
   },
   "github-pages": {
     "remote": {
