--- a/package.json
+++ b/package.json
@@ -17,15 +17,13 @@
     "parcel-bundler": "^1.4.1"
   },
   "babel": {
-    "presets": [
-      "env"
-    ]
+    "presets": ["env"]
   },
   "github-pages": {
     "remote": {
       "user": "brousalis",
-      "repo": "invasion",
-      "ref": "heads/gh-pages"
+      "repo": "brousalis.github.io",
+      "ref": "heads/master"
     },
     "commit": {
       "message": "deploy",
